ansible fix for github checkout

--- a/ansible/roles/dcm/tasks/code_checkout.yml
+++ b/ansible/roles/dcm/tasks/code_checkout.yml
@@ -12,7 +12,7 @@
 
 # ssh-agent does handle keys through ansible
 - name: "git, webupdate" 
-  git: repo=git@github.com:sbgrid/data-capture-module.git dest=/usr/local/dcm
+  git: repo=git://github.com/sbgrid/data-capture-module.git dest=/usr/local/dcm
   tags: 
    - code-update
 
