--- a/ansible/dcm.yml
+++ b/ansible/dcm.yml
@@ -1,6 +1,8 @@
 # hosts can probably be made more specific if necessary (and vagrant stays happy with them)
 - hosts: all
   sudo: yes
+  vars_files:
+   - roles/dcm/vars/secrets.yml
   roles:
    - dcm
 
