web config to allow external (IP restricted) access

--- a/ansible/roles/dcm/tasks/lighttpd.yml
+++ b/ansible/roles/dcm/tasks/lighttpd.yml
@@ -21,6 +21,7 @@
 - name: "lighttpd config"
   template: src=etc/lighttpd/lighttpd.conf.j2 dest=/etc/lighttpd/lighttpd.conf force=yes backup=yes 
   notify: httpd-restart
+  tags: web
 
 - name: "lighttpd service"
   service: name=lighttpd state=started enabled=yes
