don't try to update from the repo when it's a vagrant shared folder

--- a/ansible/roles/dcm/tasks/code_checkout.yml
+++ b/ansible/roles/dcm/tasks/code_checkout.yml
@@ -12,6 +12,7 @@
 
 # ssh-agent does handle keys through ansible
 - name: "git, webupdate" 
+  when: ( "VirtualBox" != ansible_product_name ) # don't try to do this from within VirtualBox, assuming that's vagrant
   git: repo=git://github.com/sbgrid/data-capture-module.git dest={{ DCM_PATH }}
   tags: 
    - code-update
