--- a/ansible/roles/dcm/vars/main.yml
+++ b/ansible/roles/dcm/vars/main.yml
@@ -6,5 +6,10 @@ FRONTEND_IP : "10.0.10.173"
 
 DCM_PATH : "/usr/local/dcm"
 
-DCM_VIRTUALENV : "/opt/local/virtualenv/dcm"
+# user/group for the system user running the DCM process, not end users transferring datasets
+DCM_USER: sbgriddb
+DCM_GROUP: sbgriddb
 
+# if necessary for NFS
+DCM_UID: 1000
+DCM_GID: 1000
