some cleanup of dcm ansible role

--- a/ansible/roles/dcm/tasks/code_checkout.yml
+++ b/ansible/roles/dcm/tasks/code_checkout.yml
@@ -1,6 +1,5 @@
 ---
 #
-# pulling code from github
 - name: "git-install"
   yum: name=git state=present
 
@@ -17,3 +16,5 @@
   tags: 
    - code-update
 
+- name: "install python dependencies"
+  pip: requirements={{ DCM_PATH }}/requirements.txt
