--- a/ansible/roles/redis-srv/tasks/main.yml
+++ b/ansible/roles/redis-srv/tasks/main.yml
@@ -5,7 +5,7 @@
   with_items:
    - redis-server
    - redis-tools
-   - python-redis
+#   - python-redis
 
 # centos 6
 - name: dependencies-c6
@@ -13,7 +13,7 @@
   yum: name={{ item }} state=present 
   with_items:
    - redis
-   - python-redis
+#   - python-redis
 
 - name: start redis
   service: name=redis state=started enabled=yes
