rq templating bugfix

--- a/ansible/roles/rq-srv/tasks/main.yml
+++ b/ansible/roles/rq-srv/tasks/main.yml
@@ -3,7 +3,7 @@
   pip: name=rq state=present
 
 - name: rq init.d script
-  copy: src=etc/init.d/rq dest=/etc/init.d/rq mode=0755
+  template: src=etc/init.d/rq.j2 dest=/etc/init.d/rq mode=0755 
 
 - name: start rq service
   service: name=rq state=started enabled=yes
