--- a/ansible/roles/redis-srv/tasks/main.yml
+++ b/ansible/roles/redis-srv/tasks/main.yml
@@ -1,5 +1,6 @@
 # ubuntu 1604
 - name: dependencies-u1604
+  tags: dcm
   when: ( ansible_distribution == "Ubuntu" )
   apt: name={{ item }} state=present update_cache=true
   with_items:
@@ -9,6 +10,7 @@
 
 # centos 6
 - name: dependencies-c6
+  tags: dcm
   when: ( ansible_distribution == "CentOS" )
   yum: name={{ item }} state=present 
   with_items:
@@ -16,5 +18,6 @@
 #   - python-redis
 
 - name: start redis
+  tags: dcm
   service: name=redis state=started enabled=yes
 
