use template ansible secrets for testing

--- a/ansible/roles/dcm/vars/secrets.yml.template
+++ b/ansible/roles/dcm/vars/secrets.yml.template
@@ -2,3 +2,5 @@ UPLOADHOST: dcm-dev.internal
 DVAPIKEY: dv_api_key
 DVHOSTINT: dv-glassfish.internal
 DVHOST: http://dv-glassfish.internal:8080
+glassfish_gid: 5000
+glassfish_uid: 5000
