--- a/doc/config/lighttpd.conf
+++ b/doc/config/lighttpd.conf
@@ -15,7 +15,7 @@ server.breakagelog = "/var/log/lighttpd/breakage.log"
 ## chroot example aswell.
 ##
 var.log_root    = "/var/log/lighttpd"
-var.server_root = "/var/dcm/api"
+var.server_root = "/opt/dcm/api"
 var.state_dir   = "/var/run"
 var.home_dir    = "/var/lib/lighttpd"
 var.conf_dir    = "/etc/lighttpd"
