jenkins pipeline rpm build and test

--- a/docker/compose0.yml
+++ b/docker/compose0.yml
@@ -7,6 +7,7 @@ services:
     build:
       context: .
       dockerfile: docker/c6test.dockerfile
+    container_name: dcm_server
   client:
     build: 
       context: .
