--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,6 +55,7 @@ pipeline
 				echo 'setting up dcm client (depositor) and server test environment'
 				sh 'docker-compose -f docker/compose0.yml --project-directory . build'
 				sh 'docker-compose -f docker/compose0.yml --project-directory . up -d'
+				sh 'sleep 5' /* rather than a wait-for-healthy loop */
 
 				echo 'testing successful validation'
 				sh 'docker exec -t dcm_client scripts/test_client.sh dset1 user /home/depositor/dataset'
@@ -62,14 +63,14 @@ pipeline
 				sh 'docker exec dcm_server /opt/dcm/scn/post_upload.bash'
 				sh 'docker exec dcm_server ls /hold/dset1/dset1/files.sha'
 				
-				/*
+				
 				echo 'testing failed validation'
 				sh 'docker exec -t dcm_client scripts/test_client.sh dset2 user /home/depositor/dataset'
 				sh 'docker exec dcm_server ls /deposit/dset2/dset2/files.sha'
 				sh 'docker exec dcm_server rm /deposit/dset2/dset2/d0.dat'
 				sh 'docker exec dcm_server /opt/dcm/scn/post_upload.bash'
-				sh 'docker exec dcm_server ls /deposit/dset2/dset2/files.sha'
-				*/
+				sh 'docker exec dcm_server ls /deposit/dset2/dset2/d2.dat' /*files.sha gets renamed so the user can retry */
+				
 			}
 			post
 			{
