switch compose file to cent7

--- a/docker/compose0.yml
+++ b/docker/compose0.yml
@@ -11,7 +11,8 @@ services:
   client:
     build: 
       context: .
-      dockerfile: docker/c6client.dockerfile
+      #dockerfile: docker/c6client.dockerfile
+      dockerfile: docker/c7server.dockerfile
     # necessary for docker-compose to keep the client container running
     command: sleep infinity
     container_name: dcm_client
