--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -70,6 +70,9 @@ pipeline
 				sh 'docker exec dcm_server ls /deposit/dset1/dset1/files.sha'
 				sh 'docker exec dcm_server /opt/dcm/scn/post_upload.bash'
 				sh 'docker exec dcm_server ls /hold/dset1/dset1/files.sha'
+
+				echo 'limited security testing'
+				sh 'docker exec -t dcm_client scripts/test_paranoia.bash'
 				
 				
 				echo 'testing failed validation'
@@ -105,6 +108,9 @@ pipeline
 				sh 'docker exec dcm_server ls /deposit/dset1/dset1/files.sha'
 				sh 'docker exec dcm_server /opt/dcm/scn/post_upload.bash'
 				sh 'docker exec dcm_server ls /hold/dset1/dset1/files.sha'
+
+				echo 'limited security testing'
+				sh 'docker exec -t dcm_client scripts/test_paranoia.bash'
 				
 				
 				echo 'testing failed validation'
